[tool.poetry]
name = "mb8600"
version = "0.1.0"
description = ""
authors = ["xNinjaKittyx <xNinjaKittyx@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
influxdb = "^5.3.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
